RESOLVED FIXED138108
[Mac] OS X Mavericks build broken with public SDK
https://bugs.webkit.org/show_bug.cgi?id=138108
Summary [Mac] OS X Mavericks build broken with public SDK
Bem Jones-Bey
Reported 2014-10-27 15:40:07 PDT
The bots are green, so I'm guessing this is related to the Xcode update that came out a few days ago. I could build fine a week ago, but now I get the following error: CompileC /Users/bjonesbe/Code/webkit/svn/WebKitBuild/MiniBrowser.build/Debug/MiniBrowserBundle.build/Objects-normal/x86_64/MiniBrowserWebProcessPlugIn.o MiniBrowserWebProcessPlugIn.m normal x86_64 objective-c com.apple.compilers.llvm.clang.1_0.compiler (1 failure) In file included from /Users/bjonesbe/Code/webkit/svn/Tools/MiniBrowser/MiniBrowserWebProcessPlugIn.m:1: In file included from /Users/bjonesbe/Code/webkit/svn/Tools/MiniBrowser/mac/Bundle/MiniBrowserBundle_Prefix.pch:27: In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/Cocoa.framework/Headers/Cocoa.h:12: In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/Foundation.framework/Headers/Foundation.h:8: /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/Foundation.framework/Headers/NSObjCRuntime.h:269:52: note: expanded from macro 'NS_OPTIONS' #define NS_OPTIONS(_type, _name) CF_OPTIONS(_type, _name) In file included from /Users/bjonesbe/Code/webkit/svn/Tools/MiniBrowser/MiniBrowserWebProcessPlugIn.m:1: In file included from /Users/bjonesbe/Code/webkit/svn/Tools/MiniBrowser/mac/Bundle/MiniBrowserBundle_Prefix.pch:27: In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/Cocoa.framework/Headers/Cocoa.h:12: In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/Foundation.framework/Headers/Foundation.h:6: In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CoreFoundation.h:38: In file included from /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CFBase.h:9: /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CFAvailability.h:175:53: note: expanded from macro 'CF_OPTIONS' #define CF_OPTIONS(_type, _name) enum _name : _type _name; enum _name : _type 1 error generated. I'm not sure what the correct fix is. Do we need a guard for specific versions of OS X?
Attachments
Build log (1.61 MB, text/plain)
2014-10-27 16:01 PDT, Bem Jones-Bey
no flags
Don't redefine NSEventModifierFlags if the SDK already defines it (1.22 KB, patch)
2014-10-27 23:48 PDT, mitz
mrowe: review+
Mark Rowe (bdash)
Comment 1 2014-10-27 15:53:41 PDT
I think you may have omitted the actual warning / error from the output you provided below.
Bem Jones-Bey
Comment 2 2014-10-27 16:01:02 PDT
Created attachment 240510 [details] Build log Here's the full raw build-webkit output (attached). (the earlier error was from filter-build-webkit)
Mark Rowe (bdash)
Comment 3 2014-10-27 16:12:39 PDT
The error is: WebKitBuild/Debug/WebKit.framework/Headers/WKFoundation.h:55:20: error: typedef redefinition with different types ('NSUInteger' (aka 'unsigned long') vs 'enum NSEventModifierFlags') typedef NSUInteger NSEventModifierFlags;
mitz
Comment 4 2014-10-27 23:48:08 PDT
Created attachment 240532 [details] Don't redefine NSEventModifierFlags if the SDK already defines it
mitz
Comment 5 2014-10-28 00:06:28 PDT
Committed as <http://trac.webkit.org/r175244>. I hope this fixes everything. If not, please reopen the bug and attach another build log.
Note You need to log in before you can comment on or make changes to this bug.